<resources>
    <string name="app_name">Nikkyojers</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_news_title">Posts</string>
    <string name="nav_calendar_title">Calendar</string>
    <!--<string name="nav_achievements_title">Achievements</string>-->
    <string name="nav_hbs_title">HBS</string>
    <!--<string name="nav_settings_title">Settings</string>-->
    <!--<string name="nav_about_title">About</string>-->
    <string name="nav_logoff_title">Logoff</string>

    <!--<string name="action_settings">Settings</string>-->
    <string name="action_publish">Post</string>

    <string name="facebook_application_id" translatable="false">1783058972011642</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1783058972011642</string>
    <string name="title_activity_add_post">Create new post</string>
    <string name="title_activity_hbs">HBS</string>
    <string name="tab_text_1">HBS</string>
    <string name="tab_text_2">Sutra Lotus</string>
    <string name="tab_text_3">Masters</string>
    <string name="section_1_content">&lt;p&gt;Arigatougozaimasu.&lt;/p&gt;&lt;p&gt;HBS is a sect founded by Priest Seifu Nagamatsu about 150 years ago. It is based on the teachings of the Lotus Sutra and Nichiren Shonin (The Buddhist master). Today, Rev. Nagamatsu is referred to as Nissen Shonin. He started HBS in order to reform Nichiren Buddhism.&lt;/p&gt;&lt;p&gt;From the early 17th century and for 250 years thereafter, Japan was in the Edo Era, a period controlled by the Tokugawa Shogunates. During this period, the religious groups, were under the jurisdiction of a dictatorial government, and their activities were confined to the role of praying for the deceased and conducting funerals.&lt;/p&gt;&lt;p&gt;From the early 17th century and for 250 years thereafter, Japan was in the Edo Era, a period controlled by the Tokugawa Shogunates. During this period, the religious groups, were under the jurisdiction of a dictatorial government, and their activities were confined to the role of praying for the deceased and conducting funerals.&lt;/p&gt;&lt;p&gt;Nissen Shonin played an active role from the end of the Edo Era through the Meiji Period, The Meiji Era began in 1868 under the newly established Emperor System. At this time, Nissen Shonin was considered a scholar and a cultural personality.&lt;/p&gt;&lt;p&gt;After the death of his mother, Nissen Shonin became interested in Buddhism. At the age of 32, he convinced himself that the teachings of the Lotus Sutra and of Nichiren Shonin were the true teachings of Buddhism, and became a priest. At age 41, he established HBS.\nPresently, there are about 400 HBS temples throughout Japan, 11 in Brazil, 2 in America, 1 in Italy, 6 in Korea, 1 in Taiwan and 1 in Australia, and also 1 meeting house in Sri Lanka, where about 300,000 worshippers can go to pray and listen to sermons based on the teachings of Nichiren Shonin and on the Lotus Sutra.&lt;/p&gt;&lt;p&gt;Arigatougozaimasu.&lt;/p&gt;</string>
    <string name="section_2_content">&lt;p&gt;Arigatougozaimasu.&lt;/p&gt;&lt;p&gt;Buddhism is a religion based on the teachings of Buddha Shakyamuni, who was born in India 2600 years ago.&lt;/p&gt;&lt;p&gt;Today in Japan, Buddhism is divided into hundreds of different sects because of the various sutras.&lt;br/&gt;For fifty years, Buddha continuously preached his teachings to innumerable people.&lt;br/&gt;His teachings, taught through various periods and in different regions, were later consolidated and edited into textbooks. These textbooks have been preserved and handed down to our generation.&lt;/p&gt;&lt;p&gt;There is no uniformity in the contents of Buddha’s diverse sutras. Each separate sutra tells what one should believe in, how it should be practiced, how matters should be looked at, and how it should be thought out.&lt;br/&gt;The contents of each sutra differ because each and every sutra is applied to each individual’s situation, one’s circumstances, one’s sufferings or capabilities.&lt;br/&gt;Each sutra preached by Buddha is a worthy teaching.&lt;/p&gt;&lt;p&gt;After Buddha’s death, Buddhism spread from India into China, to Southeast Asia and to Japan.&lt;br/&gt;During this period of transition, the various Buddhist preachers could not decide upon which sutra was the most important. Gradually, thereafter, many different factions appeared.&lt;/p&gt;&lt;p&gt;The eminent Zen master, Dogen (1200 – 1253) said:&lt;/p&gt;&lt;p style="padding-left: 90px;"&gt;&lt;em&gt;“The Lotus Sutra is the king of&lt;span style="line-height: 1.714285714; font-size: 1rem;"&gt;sutras”&lt;/span&gt;&lt;/em&gt;&lt;/p&gt;&lt;p&gt;Arnold Toynbee, a renowned historian, said:&lt;/p&gt;&lt;p style="padding-left: 90px;"&gt;&lt;em&gt;“If you were to select 10 books which should be passed on to the 21st Century, I will recommend the Lotus Sutra be one of them from the standpoint of Buddhism”&lt;/em&gt;&lt;/p&gt;&lt;p&gt;From ancient times, many preachers researched the Lotus Sutra and practiced its teachings, but the only preacher who grasped the essence of the Lotus Sutra and enlightened it to the masses that it was the true teaching and how it should be practiced was Nichiren Shonin, the greatest religious person, who played an active role about 750 years ago.&lt;/p&gt;&lt;p&gt;Arigatougozaimasu.&lt;/p&gt;</string>
    <string name="section_3_1_content">&lt;p&gt;&lt;strong&gt;Great Master Nichiren Daibossatsu - Renaissance of the Jyougyou Bossatsu of the Age Mappou&lt;/strong&gt;&lt;/p&gt;&lt;p&gt;The Great Master Nichiren Daibossatsu was born in a fishing province in Kominato in the Boso Peninsula, Chiba Prefecture today, on 16 February 1222. At his birth, he was baptized with the name Zennitimaro.&lt;/p&gt;&lt;p&gt;Growing up with the love of his parents, Zennitimaro developed with health and, at 12 years old, on May 12, 1233, he entered the monastic life as a disciple of Douzenbou in Seityouji temple. In his monastic initiation was named Yakuoumaro. As an apprentice, he devoted himself to the spiritual enhancement, striving in practice and study. After four years of dedication, he was ordained under the name Zeshoubou Rentyou.&lt;/p&gt;&lt;p&gt;The young monk Rentyou was dedicated hard to practice and study. However, realizing that to become a great monk should have great wisdom, he retreated to the sanctuary of Bossatsu Kokuzo, located in Temple Seityouji himself, and begged that he might become the wisest man in all Japan. His wish came true and on this day, the Bossatsu Kokuzo appeared handing her the gemstone that symbolizes the wisdom he had acquired.&lt;/p&gt;&lt;p&gt;At 17 he went down the mountain where was the Seityouji Temple to study in Kamakura. After a few years, he returned to Seityouji Temple, but felt an urgent need to further deepen in the Buddhism studies, and at 21 years of age went to the Monastery Hieizan in Kyoto.&lt;/p&gt;&lt;p&gt;This Monastery was the most prestigious college of monks of the time, belonging to the branch of Tendai Buddhism, founded by Saityou (Dengyou Daishi, 767 ~ 822) - considered one of the predecessors of Nichiren - who fought to rescue the true values ​​contained in the teachings of Buddha and not just follow orders and formalities imposed by the imperial government for convenience of the monks of the time.&lt;/p&gt;&lt;p&gt;Rentyou devoted himself deeply to studies and practices, wandering for 12 years in various locations and temples. After years of studies on the true teachings of the Buddha, he found in the Lotus Sutra the highest teaching, intent and true essence of the Buddha \'s compassion, which is revealed in Honmon Happon (Primordial Way of the Lotus Sutra - chapters 15 to 22). In it, the Buddha clarified that the quintessence of his teachings to the current was Mappou (Age of Decadence, according to Buddhist doctrine) is the Mantra Sacred NAMUMYOUHOURENGUEKYOU .&lt;/p&gt;&lt;p&gt;So he returned to the temple Seityouji, and on April 28, 1253, at 32 years of age, at sunrise pronounced NAMUMYOUHOURENGUEKYOU  serenely, declaring the beginning of a new era of the true redemption of Buddhism, facing the beings\' needs, so that all were to become a Bossatsu and to attain Buddhahood.&lt;/p&gt;&lt;p&gt;From this day was called Nichiren ( NiTi = Sun, Ren = Lotus), who like the sun and the moon illuminates the darkness of the heart of things, and that as the Lotus Flower, It is fully realized regardless of the circumstances.&lt;/p&gt;&lt;p&gt;Since the beginning of the practice of prayer Odaimoku ( NAMUMYOUHOURENGUEKYOU ) to her the death, she went through "Big Four admonitions" and countless other obstacles. All served to strengthen and authenticate their status as "Sent from Primordial Buddha," ie Jyougyou Bossatsu as provided in Lotus Sutra. His determination, compassion and vigor, founded by faith in all activities, are its main features, which are still practiced by his followers. He departed this world, hiding physically on October 13, 1282, at 60 years old.&lt;/p&gt;</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Word</string>
    <string name="calendar_title">Calendar</string>
    <string name="title_activity_add_event">New Event</string>
    <string name="allday">All day</string>
    <string name="hint_post_description">Description, deliver a message for the people</string>
    <string name="hint_post_title">Post title, subdescription title</string>
    <string name="hint_event_description">Event description</string>
    <string name="hint_event_title">Enter event title</string>
    <string name="hint_location">Location</string>
    <string name="action_create">Create</string>
    <string name="addevent_title_error">Title can`t be empty</string>
    <string name="addevent_date_error">Error parsing date or time</string>
    <string name="addevent_date_notbefore">Start date should be before End Date!</string>
    <string name="calendar_noevent">No Events</string>
    <string name="eventdetail_notfound">Event not found</string>
    <string name="content_time">Time</string>
    <string name="content_location">Location</string>
    <string name="eventdetail_title">Event Detail</string>
    <string name="widget_title">Next Event</string>
    <string name="snack_disconnected">Disconnected. Please check your internet connection.</string>
    <string name="nosearchresults">No matches found.</string>
    <string name="event_owner">created by %s</string>
    <string name="posted">Posted!</string>
</resources>
